# nodecules

./: .gitignore  API_EXAMPLES.md  GETTING_STARTED.md  LICENSE  README.md  architecture.md  dev-setup.sh  docker-compose.yml  plan-of-record.md  test-system.sh  test_workflow.py
backend/: Dockerfile  alembic.ini  architecture.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1ac44db2a12e_add_smart_contexts_table.py  1c2ab5a48576_add_context_storage_table.py  e6b1e9e7359f_add_immutable_contexts_table.py
backend/nodecules/: __init__.py  main.py
backend/nodecules/api/: __init__.py  executions.py  graphs.py  instances.py  models.py  plugins.py
backend/nodecules/core/: __init__.py  content_addressable_context.py  executor.py  graph.py  instance_executor.py  smart_context.py  types.py
backend/nodecules/models/: __init__.py  database.py  instance.py  schemas.py
backend/nodecules/plugins/: __init__.py  builtin_nodes.py  context_nodes.py  graph_nodes.py  immutable_chat_node.py  loader.py  smart_chat_node.py
backend/scripts/: init_db.py
examples/: README.md  auto_discovered_plugin_test.nodecules.json  chat_graph.json  claude_chat_with_context.nodecules.json  context_management_demo.nodecules.json  simple_text_processing.nodecules.json  text_analysis_pipeline.nodecules.json
frontend/: architecture.md  index.html  package-lock.json  package.json  vite.config.ts
planning/: api-gateway-doc.md  compass_artifact_wf-48527f00-2636-4aa4-b0f7-e32da1961a49_text_markdown.md  data-layer-doc.md  execution-engine-doc.md  frontend-architecture-doc.md  (+3 more)
(+24 files in other folders)
